tree appears alongside gene clusters. need to fix alignment + other bugs

--- a/assets/style.css
+++ b/assets/style.css
@@ -58,3 +58,11 @@ body, html {
 #evalueCutOff {
     transform: translate(0px, 50px) rotate(-90deg);
 }
+
+#treeBox {
+    position: absolute;
+}
+
+#geneClusterBox {
+    position: absolute;
+}
